<resources>
    <string name="app_name">Lens_Assignment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="due_date"><b>Due Date</b></string>
    <string name="priority_level">Priority Level</string>
    <string name="task_location">Task Location</string>
    <string name="completed">Completed</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you Sure you want to delete this note?</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="enter_task_description">Enter task description</string>
    <string name="enter_due_date">Enter due date</string>
    <string name="enter_task_location">Enter task location</string>
    <string name="submit">Submit</string>
    <string name="dashboard">DashBoard</string>
    <string name="high_priority">High Priority</string>
    <string name="medium_priority">Medium Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="tasks">Tasks</string>
    <string name="pending_task">Pending Task</string>
    <string name="search">Search</string>
    <string name="select_language">Select Language</string>
    <string name="user_name">User Name</string>
    <string name="something_about_the_user">Something about the user</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="add_task">Add Task</string>
    <string name="edit_task">Edit Task</string>

    <string-array name="priority_levels">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>


</resources>