<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    android:id="@+id/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_setting_scene"
    tools:context=".ui.settingPackage.SettingFragment"
    android:padding="20dp">


    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/personImageSquare"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center_vertical"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_default_person"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/themeChange"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="20dp"
        android:elevation="5dp"

        app:lottie_rawRes="@raw/animation_icon"
        android:visibility="gone"
        android:backgroundTint="@color/transparent"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/personName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"

        app:layout_constraintBottom_toBottomOf="@+id/personImageSquare"
        app:layout_constraintStart_toStartOf="parent"
       />

    <TextView
        android:id="@+id/onlineStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@+id/personName"
        app:layout_constraintTop_toBottomOf="@+id/personName"
       />


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personImageSquare">

        <TextView
            android:id="@+id/userName"
            android:text="@string/user_name"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/userStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:text="@string/something_about_the_user"
            android:fontFamily="@font/inter"

            android:letterSpacing="0.01"
            />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dataLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        android:orientation="vertical">

        <!-- Top TextView -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/select_language"
            android:textSize="18sp"
            android:fontFamily="@font/inter_semibold"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toTopOf="@id/hindiButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Hindi Button (TextView styled as button) -->
        <TextView
            android:id="@+id/hindiButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/hindi"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/englishButton"/>

        <!-- English Button (TextView styled as button) -->
        <TextView
            android:id="@+id/englishButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/english"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toEndOf="@id/hindiButton"
            app:layout_constraintEnd_toEndOf="parent"/>
        <!-- Checkbox with TextView -->
        <CheckBox
            android:id="@+id/notificationCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=""
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/englishButton"
            app:layout_constraintTop_toBottomOf="@id/hindiButton" />

        <TextView
            android:id="@+id/notificationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="Receive notifications"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/notificationCheckBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hindiButton" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personImageSquare" />



</androidx.constraintlayout.motion.widget.MotionLayout>